# rockPaperScissor

./: CMakeLists.txt  main.c  random_gen.c  random_gen.h  rps.h  sqlite_conn.c  sqlite_conn.h
